--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,4 +1,3 @@
-
-<mat-toolbar color="primary">
-    <span>ROBIN MAHIEU LPDIM FOOTER</span>
+<mat-toolbar color="second">
+    <span>Copyright 2022</span>
 </mat-toolbar>
